cmake_minimum_required(VERSION 3.8)
project(DOORLCD)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Libraries/CMSIS/Device/ST/STM32F0xx/Include/stm32f0xx.h
        Libraries/CMSIS/Device/ST/STM32F0xx/Include/system_stm32f0xx.h
        Libraries/CMSIS/Device/ST/STM32F0xx/Source/Templates/system_stm32f0xx.c
        Libraries/CMSIS/Include/arm_common_tables.h
        Libraries/CMSIS/Include/arm_const_structs.h
        Libraries/CMSIS/Include/arm_math.h
        Libraries/CMSIS/Include/core_cm0.h
        Libraries/CMSIS/Include/core_cm0plus.h
        Libraries/CMSIS/Include/core_cm3.h
        Libraries/CMSIS/Include/core_cm4.h
        Libraries/CMSIS/Include/core_cm4_simd.h
        Libraries/CMSIS/Include/core_cmFunc.h
        Libraries/CMSIS/Include/core_cmInstr.h
        Libraries/CMSIS/Include/core_sc000.h
        Libraries/CMSIS/Include/core_sc300.h
        Libraries/CMSIS/RTOS/cmsis_os.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_adc.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_cec.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_comp.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_crc.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dac.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dbgmcu.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dma.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_exti.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_flash.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_gpio.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_i2c.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_iwdg.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_misc.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_pwr.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_rcc.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_rtc.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_spi.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_syscfg.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_tim.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_usart.h
        Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_wwdg.h
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_adc.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_cec.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_comp.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_crc.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dac.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dbgmcu.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dma.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_exti.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_flash.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_gpio.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_i2c.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_iwdg.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_misc.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_pwr.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_rcc.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_rtc.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_spi.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_syscfg.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_tim.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_usart.c
        Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_wwdg.c
        User/inc/delay.h
        User/inc/FAT.h
        User/inc/hardware_conf.h
        User/inc/InitIQS333.h
        User/inc/mmc_sd.h
        User/inc/mp3player.h
        User/inc/PlayMode.h
        User/inc/spi.h
        User/inc/stm32f0xx_conf.h
        User/inc/stm32f0xx_it.h
        User/inc/stm32f10x_conf.h
        User/inc/stm32f10x_it.h
        User/inc/VS10XX.h
        User/src/OLED/bmp.h
        User/src/OLED/mfrc522.c
        User/src/OLED/mfrc522.h
        User/src/OLED/oled.c
        User/src/OLED/oled.h
        User/src/OLED/oledfont.h
        User/src/OLED/sys.c
        User/src/OLED/sys.h
        User/src/delay.c
        User/src/FAT.C
        User/src/main.c
        User/src/MMC_SD.C
        User/src/mp3player.c
        User/src/PlayMode.c
        User/src/spi.c
        User/src/stm32f10x_it.c
        User/src/system_stm32f10x.c
        User/src/VS10XX.c)

add_executable(DOORLCD ${SOURCE_FILES})